--- a/Jiggle/App.config
+++ b/Jiggle/App.config
@@ -1,6 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Jiggle.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
+    <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
+    <userSettings>
+        <Jiggle.Properties.Settings>
+            <setting name="Enabled" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Mode" serializeAs="String">
+                <value>startMenu</value>
+            </setting>
+            <setting name="AutoPause" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ActivityInterval" serializeAs="String">
+                <value>5</value>
+            </setting>
+            <setting name="PauseInterval" serializeAs="String">
+                <value>2</value>
+            </setting>
+        </Jiggle.Properties.Settings>
+    </userSettings>
 </configuration>
