update default settings

--- a/Jiggle/App.config
+++ b/Jiggle/App.config
@@ -14,16 +14,16 @@
                 <value>True</value>
             </setting>
             <setting name="Mode" serializeAs="String">
-                <value>startMenu</value>
+                <value>mouseJump</value>
             </setting>
             <setting name="AutoPause" serializeAs="String">
                 <value>True</value>
             </setting>
             <setting name="ActivityInterval" serializeAs="String">
-                <value>5</value>
+                <value>60</value>
             </setting>
             <setting name="PauseInterval" serializeAs="String">
-                <value>2</value>
+                <value>20</value>
             </setting>
         </Jiggle.Properties.Settings>
     </userSettings>
